--- a/static/css/apps/notes.css
+++ b/static/css/apps/notes.css
@@ -1,5 +1,4 @@
 body.notes-page {
-  background-color: var(--background-subnav);
 }
 
 body.notes-page .content {
